# control-orogen-waypoint_navigation

./: CMakeLists.txt  README.md  manifest.xml  waypoint_navigation.orogen  waypoint_navigationTypes.hpp
config/: waypoint_navigation::FollowingTest.yml  waypoint_navigation::Task.yml  waypoint_navigation::TrajectoryTest.yml
scripts/: test_waypoint_following.rb  test_waypoint_navigation.rb  test_waypoint_trajectory.rb
tasks/: CMakeLists.txt  FollowingTest.cpp  FollowingTest.hpp  Task.cpp  Task.hpp  TrajectoryTest.cpp  TrajectoryTest.hpp
