include(waypoint_navigationTaskLib)
ADD_LIBRARY(${WAYPOINT_NAVIGATION_TASKLIB_NAME} SHARED 
    ${WAYPOINT_NAVIGATION_TASKLIB_SOURCES})

add_dependencies(${WAYPOINT_NAVIGATION_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${WAYPOINT_NAVIGATION_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${WAYPOINT_NAVIGATION_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${WAYPOINT_NAVIGATION_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${WAYPOINT_NAVIGATION_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${WAYPOINT_NAVIGATION_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${WAYPOINT_NAVIGATION_TASKLIB_HEADERS}
    DESTINATION include/orocos/waypoint_navigation)

